HAWQ-1032. Set bucket number of child partition to parent partition only when policy type equals to POLICYTYPE_PARTITIONED.